# ComfyUI-EnvVariable

./: .gitignore  README.md  __init__.py  env_variable_node.py  pyproject.toml
.github/workflows/: publish-comfyui-registry.yml
